rustdocs/errors/rust-bitcoin-units-src-block.rs.txt
error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/block.rs:16:5
   |
16 | use core::{fmt, ops};
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::locktime`
  --> ../rust-bitcoin/units/src/block.rs:26:5
   |
26 | use crate::locktime;
   |     ^^^^^^^^^^^^^^^ no `locktime` in the root

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `parse_int`
  --> ../rust-bitcoin/units/src/block.rs:41:16
   |
41 |           crate::parse_int::impl_parse_str_from_int_infallible!($newtype...
   |                  ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
...
88 | / impl_u32_wrapper! {
89 | |     /// A block height. Zero denotes the genesis block.
90 | |     ///
91 | |     /// This type is not meant for constructing height based timelocks...
...  |
96 | |     pub struct BlockHeight(u32);
97 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `impl_u32_wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `parse_int`
   --> ../rust-bitcoin/units/src/block.rs:41:16
    |
 41 |           crate::parse_int::impl_parse_str_from_int_infallible!($newtyp...
    |                  ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
...
225 | / impl_u32_wrapper! {
226 | |     /// An unsigned block interval.
227 | |     ///
228 | |     /// Block interval is an integer type representing a difference b...
...   |
233 | |     pub struct BlockHeightInterval(u32);
234 | | }
    | |_- in this macro invocation
    |
    = note: this error originates in the macro `impl_u32_wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `parse_int`
   --> ../rust-bitcoin/units/src/block.rs:41:16
    |
 41 |           crate::parse_int::impl_parse_str_from_int_infallible!($newtyp...
    |                  ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
...
287 | / impl_u32_wrapper! {
288 | |     /// The median timestamp of 11 consecutive blocks.
289 | |     ///
290 | |     /// This type is not meant for constructing time-based timelocks....
...   |
295 | |     pub struct BlockMtp(u32);
296 | | }
    | |_- in this macro invocation
    |
    = note: this error originates in the macro `impl_u32_wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `parse_int`
   --> ../rust-bitcoin/units/src/block.rs:41:16
    |
 41 |           crate::parse_int::impl_parse_str_from_int_infallible!($newtyp...
    |                  ^^^^^^^^^ use of unresolved module or unlinked crate `parse_int`
...
358 | / impl_u32_wrapper! {
359 | |     /// An unsigned difference between two [`BlockMtp`]s.
360 | |     ///
361 | |     /// This type is not meant for constructing time-based timelocks....
...   |
366 | |     pub struct BlockMtpInterval(u32);
367 | | }
    | |_- in this macro invocation
    |
    = note: this error originates in the macro `impl_u32_wrapper` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/block.rs:457:8
    |
457 | crate::internal_macros::impl_op_for_references! {
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/block.rs:559:8
    |
559 | crate::internal_macros::impl_add_assign!(BlockHeightInterval);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/block.rs:560:8
    |
560 | crate::internal_macros::impl_sub_assign!(BlockHeightInterval);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/block.rs:561:8
    |
561 | crate::internal_macros::impl_add_assign!(BlockMtpInterval);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
   --> ../rust-bitcoin/units/src/block.rs:562:8
    |
562 | crate::internal_macros::impl_sub_assign!(BlockMtpInterval);
    |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/block.rs:136:6
    |
136 | impl TryFrom<BlockHeight> for absolute::Height {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 16 + use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/block.rs:273:6
    |
273 | impl TryFrom<BlockHeightInterval> for relative::NumberOfBlocks {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 16 + use std::convert::TryFrom;
    |

error[E0425]: cannot find type `BlockTime` in the crate root
   --> ../rust-bitcoin/units/src/block.rs:322:40
    |
322 |     pub fn new(mut timestamps: [crate::BlockTime; 11]) -> Self {
    |                                        ^^^^^^^^^ not found in the crate root

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/block.rs:348:6
    |
348 | impl TryFrom<BlockMtp> for absolute::MedianTimePast {
    |      ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 16 + use std::convert::TryFrom;
    |

error: aborting due to 15 previous errors

Some errors have detailed explanations: E0405, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
